--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ url: https://just-the-docs.github.io
 
 aux_links:
   Github Classroom: 
-  Discussion: 
+  Discussion: https://github.com/kaisttruelab/CE252/discussions
 
 
 heading_anchors: true
